Fix incorrectly aligned search icon on Special:ManageTranslatorSandbox
Icon was completely out of place on the Timeless skin, and slight
misaligned on the Vector skin.

Made the styles little less generic to avoid possible conflicts.

Changed the text of the search box to be more specific as
"Search requests" was a little vague.

Bug: T226409

--- a/resources/css/ext.translate.special.managetranslatorsandbox.css
+++ b/resources/css/ext.translate.special.managetranslatorsandbox.css
@@ -13,18 +13,24 @@
 
 /* Panes */
 .filter.pane,
-.search.pane {
+.tsb-container .search.pane {
 	border-bottom: 1px solid #575656;
 	height: 2em;
 	line-height: 50px;
 	font-size: 24px;
 }
 
-.grid .search.pane {
+.tsb-container.grid .search.pane {
 	background: no-repeat scroll left top transparent;
 	background-image: /* @embed */ linear-gradient( transparent, transparent ), url( ../images/search.svg );
-	background-size: 25px;
-	padding-left: 25px;
+	background-size: 22px;
+	padding-left: 30px;
+	background-position-y: 10px;
+}
+
+.tsb-container.grid .search.pane input[ type='search' ] {
+	box-sizing: border-box;
+	margin-top: 7px;
 }
 
 .request-filter-box {
